Updates to readme with new Supervisord recipes